--- a/index.html
+++ b/index.html
@@ -27,21 +27,38 @@
             background-color: purple;
             color: white;
         }
+        .putih {
+            background-color: white;
+        }
         a {
             text-decoration:none;
             color: black;
             font-size: 25px;
         }
+        h1 {
+            font-size: 50px;
+        }
+        .warna {
+            background-color: #000000; /* Green */
+            border: none;
+            color: rgb(255, 255, 255);
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            border-radius: 5px;
+        }
     </style>
 </head>
 
     <h1>Bermain dengan warna</h1>
-    <button type="button" id="merah"></button>
-    <button type="button" id="jingga"></button>
-    <button type="button" id="kuning"></button>
-    <button type="button" id="hijau"></button>
-    <button type="button" id="biru"></button>
-    <button type="button" id="ungu"></button>
+    <button type="button" id="merah" class="warna">red</button>
+    <button type="button" id="jingga" class="warna">orange</button>
+    <button type="button" id="kuning" class="warna">yellow</button>
+    <button type="button" id="hijau" class="warna">green</button>
+    <button type="button" id="biru" class="warna">blue</button>
+    <button type="button" id="ungu" class="warna">purple</button>
     <script src="script.js"></script>
     <br>
     <a href="index.html">reset</a>
